Ask claude for correction and add some tests